# dj-shortcuts

./: README.md  pyproject.toml
django_shortcuts/: cli.py  creator.py
django_shortcuts/templates/: admin_core.txt  dockerfile.txt  env.txt  gitignore.txt  models_core.txt  readme_project.txt  serializers_api.txt  settings.py.txt  urls_api.txt  views_api.txt
