[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-shortcut"
version = "0.1.1"
description = "A command-line tool to initialize a production-ready Django REST Framework project with one command."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
     {name = "Mahedi Hasan Noyon", email = "mahedi.dev2002@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django",
]
dependencies = []

[project.scripts]
dj-shortcuts = "django_shortcuts.cli:main"
django-shortcuts = "django_shortcuts.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["django_shortcuts"]
include = [
    "django_shortcuts/templates/*.txt"
]
