[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-shortcut"
version = "0.1.3"
description = "A CLI tool to bootstrap a production-ready Django REST Framework project in seconds."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
    { name = "Mahedi Hasan Noyon", email = "mahedi.dev2002@gmail.com" }
]

keywords = [
    "django",
    "drf",
    "django-rest-framework",
    "cli",
    "boilerplate",
    "project-generator",
    "backend",
    "python"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Framework :: Django",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",

    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = []

[project.urls]
Homepage = "https://github.com/imhnoyon/dj-shortcuts"
Documentation = "https://github.com/imhnoyon/dj-shortcuts#readme"
Repository = "https://github.com/imhnoyon/dj-shortcuts"
"Bug Tracker" = "https://github.com/imhnoyon/dj-shortcuts/issues"
Portfolio = "https://mahed.pythonanywhere.com/"
"GitHub Profile" = "https://github.com/imhnoyon"

[project.scripts]
dj-shortcuts = "django_shortcuts.cli:main"
django-shortcuts = "django_shortcuts.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["django_shortcuts"]

include = [
    "django_shortcuts/templates/*.txt"
]
